hphp/test/zend/good/ext/readline/tests/readline_info_001.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("readline")) die("skip");
if (READLINE_LIB == "libedit") die("skip readline only");
}
