hphp/test/zend/bad/ext/opcache/tests/revalidate_path_01.php.skipif
<?php require_once('skipif.inc'); ?>
<?php if (php_sapi_name() != "cli") die("skip CLI only"); ?>